<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.lizarragabriel.retrofitcall.ui.login.LoginFragment"
        android:label="@string/fragment_login_title" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.lizarragabriel.retrofitcall.ui.home.HomeFragment"
        android:label="@string/fragment_home_title" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
        <action
            android:id="@+id/action_homeFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.lizarragabriel.retrofitcall.ui.detail.DetailFragment"
        android:label="@string/fragment_detail_title" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.lizarragabriel.retrofitcall.ui.favorite.FavoriteFragment"
        android:label="@string/fragment_favorite_title" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.lizarragabriel.retrofitcall.ui.signup.SignUpFragment"
        android:label="@string/fragment_signup_title" />
</navigation>