<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.lizarragabriel.pruebaandroid.ui.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.SignUpFragment">

        <TextView
            android:id="@+id/mRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            checkLayoutEmail="@{model.errorEmail}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_layout"
            android:hint="@string/user"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mRegister">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            checkLayoutPassword="@{model.errorPassword}"
            android:layout_width="match_parent"
            android:id="@+id/mPasswordLayout"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/mPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/mLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{() -> model.mSignupButton(mUser.getText().toString(), mPassword.getText().toString())}"
            android:text="@string/sign_up"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/mPasswordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>