<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.lizarragabriel.retrofitcall.ui.login.LoginFragment" />
        <variable
            name="model"
            type="com.lizarragabriel.retrofitcall.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/beericon"/>

        <TextView
            android:id="@+id/mWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            checkLayoutEmail="@{model.errorEmail}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_layout"
            android:hint="@string/user"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/mEmail" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            checkLayoutPassword="@{model.errorPassword}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <Button
                android:id="@+id/mSignIn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> fragment.mNavigateSign()}"
                android:text="@string/sign_up"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/mLogIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> model.mLoginButton(mEmail.getText().toString(), mPassword.getText().toString())}"
                android:text="@string/log_in"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </LinearLayout>
</layout>

<!--<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.lizarragabriel.pruebaandroid.ui.login.LoginFragment" />
        <variable
            name="model"
            type="com.lizarragabriel.pruebaandroid.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/mWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            checkLayoutEmail="@{model.errorEmail}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user_layout"
            android:hint="@string/user"
            app:endIconMode="clear_text"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/mWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/mEmail" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mPasswordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            checkLayoutPassword="@{model.errorPassword}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/mSignIn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{() -> fragment.mNavigateSign()}"
            android:text="@string/sign_up"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mPasswordLayout" />

        <Button
            android:id="@+id/mLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{() -> model.mLoginButton(mEmail.getText().toString(), mPassword.getText().toString())}"
            android:text="@string/log_in"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/mPasswordLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
-->
